finished Assignment 2 CS2